--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 # Exported from Render on 2024-06-29T06:58:04Z
 services:
 - type: web
-  name: quickpay
+  name: Swiftpay
   runtime: image
   image:
-    url: docker.io/shubham171/quickpay-user:latest
+    url: docker.io/shubham171/Swiftpay-user:latest
     creds:
       fromRegistryCreds:
         name: MyCredentials
